offers overlap with navigation fix

--- a/offers.css
+++ b/offers.css
@@ -55,7 +55,11 @@ display: none;
 }
 #offers{
     margin-top: -70px;
-    height: 100vh!important;
+    height: 99vh!important;
+    z-index: 1;
+}
+nav {
+    z-index: 2;
 }
 }
 @media only screen and (max-width: 768px) {
